# ocserv-cmake

./: CMakeLists.txt  README.md  config.h.in
cmake/: autoconf.cmake  conf_info.cmake  link_c.cmake  link_crypt.cmake  link_ev.cmake  link_geoip.cmake  link_gnutls.cmake  link_gssapi.cmake  link_llhttp.cmake  link_lz4.cmake  link_m.cmake  link_nettle.cmake  link_nl.cmake  link_oauth.cmake  link_pam.cmake  link_pcl.cmake  link_protobuf_c.cmake  link_readline.cmake  link_seccomp.cmake  link_systemd.cmake  link_talloc.cmake  link_util.cmake  link_wrap.cmake  sources-occtl.cmake  sources-ocpasswd.cmake  sources-ocserv.cmake  sources-worker.cmake  sources.cmake
docker/: Dockerfile
